# ozd

./: .gitignore  CONTRIBUTING.md  Cargo.toml  NEXT-STEPS.md  PLAN-WEEK.md  README.md  ozd.example.toml
.github/workflows/: ci.yml
.kiro/steering/: autonomous.md
Wiki/: ARCHITECTURE-ZFS.md  ARCHITECTURE.md  BENCH.md  GO-MIGRATION.md  GRAFANA.md  KUBO-INTEGRATION.md  PLAN-A-vs-B.md  PLAN.md  ROADMAP.md  WEEKLY-ARCS.md
Wiki/Arch_DDD/HDD_SDD/: STORAGE-IDEAS-SYNTHESIS.md  TON-storage-hdd-ssd.md  cassandra-storage-hdd-ssd.md  clickhouse-storage-hdd-ssd.md  cockroach-storage-hdd-ssd.md  dgraph-storage-hdd-ssd.md  discord-storage-hdd-ssd.md  dragonfly-storage-hdd-ssd.md  druid-storage-hdd-ssd.md  flink-storage-hdd-ssd.md  go-ethereum-storage-hdd-ssd.md  go-zfs-storage-hdd-ssd.md  hadoop-storage-hdd-ssd.md  hive-storage-hdd-ssd.md  ignite-storage-hdd-ssd.md  influxdb-storage-hdd-ssd.md  iroh-storage-hdd-ssd.md  kafka-storage-hdd-ssd.md  nats-storage-hdd-ssd.md  oceanbase-storage-hdd-ssd.md  pebble-storage-hdd-ssd.md  polardb-pg-storage-hdd-ssd.md  qdrant-storage-hdd-ssd.md  quorum-storage-hdd-ssd.md  redis-storage-hdd-ssd.md  rocksdb-storage-hdd-ssd.md  rustfs-storage-hdd-ssd.md  scylladb-storage-hdd-ssd.md  tarantool-storage-hdd-ssd.md  ydb-storage-hdd-ssd.md
Wiki/Arch_DDD/Network/: NETWORKING-SYNTHESIS.md  YDB-Interconnect.md  oceanbase-networking.md  scylladb-networking.md  ton-networking.md
Wiki/Feynman/: README.md  ballast-recovery.md  bitmask-allocator.md  bloom-filter.md  bulk-stream-writer.md  capacity-ttl-cache.md  changelog-dstl.md  chunk-range-fetch.md  coalesce-routing.md  command-runner-port.md  compute-storage-separation.md  cooling-tier.md  device-adaptation.md  dfs-backup.md  dictionary-compression.md  disk-allocator.md  disk-balancer.md  disk-fullness-hysteresis.md  disk-health-fsm.md  domain-without-io.md  durability-via-replication.md  elastic-io-tokens.md  entity-actor.md  ephemeral-ttl.md  erasure-set-distribution.md  failure-domains.md  fec-transfer.md  fixed-block-allocator.md  forseti.md  freeing-effective-free.md  geth-freezer.md  geth-pathdb.md  geth-write-buffer.md  geth.md  group-commit.md  handoff.md  hardlink-freeze.md  heal-priority-queue.md  historical-rebalance.md  hrw-placement.md  (+60 more)
Wiki/adr/: 0001-storage-substrate.md
crates/ozd-admin/: Cargo.toml
crates/ozd-admin/src/: lib.rs  types.rs
crates/ozd-app/: Cargo.toml
crates/ozd-app/src/: cache.rs  car.rs  diskslow.rs  erasure.rs  health.rs  latency.rs  lib.rs  metrics.rs  placement.rs  pool.rs  throttle.rs  verified.rs
crates/ozd-bench/: Cargo.toml
crates/ozd-bench/src/: main.rs
crates/ozd-daemon/: Cargo.toml
crates/ozd-daemon/src/: main.rs
crates/ozd-domain/: Cargo.toml
crates/ozd-domain/src/: lib.rs  piece.rs
crates/ozd-engine/: Cargo.toml
crates/ozd-engine/benches/: storage_bench.rs
crates/ozd-engine/src/: lib.rs  segment.rs
crates/ozd-engine/tests/: proptest_segment.rs
crates/ozd-ipfs/: Cargo.toml
crates/ozd-ipfs/src/: async_adapter.rs  lib.rs  ratelimit.rs  sigv4.rs
crates/ozd-ipfs/tests/: e2e_s3.rs  range_get.rs  sigv4_router.rs
crates/ozd-zfs/: Cargo.toml
crates/ozd-zfs/src/: lib.rs  parser.rs  properties.rs  runner.rs
deployments/: ozd.service
deployments/docker/: Dockerfile.kubo  Dockerfile.ozd  README-W9.md  docker-compose.yml  kubo-init.sh  ozd-docker.toml  smoke-local.toml
scripts/: backup.sh  gen_config.sh  kubo_smoke.sh
