[package]
name = "ozd-daemon"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "ozd"
path = "src/main.rs"

[dependencies]
ozd-domain = { workspace = true }
ozd-engine = { workspace = true }
ozd-app = { workspace = true }
ozd-ipfs = { workspace = true }
ozd-admin = { workspace = true }
ozd-zfs = { workspace = true }
tokio = { workspace = true }
axum = { workspace = true }
serde = { workspace = true }
toml = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
