[package]
name = "ozd-engine"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
ozd-domain = { workspace = true }
libc = "0.2"
redb = { workspace = true }
crc32fast = { workspace = true }
zstd = { workspace = true }
parking_lot = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
proptest = "1"
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "storage_bench"
harness = false
