[package]
name = "ozd-ipfs"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
ozd-domain = { workspace = true }
ozd-app = { workspace = true }
axum = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
sha2 = { workspace = true }
hmac = { workspace = true }

[dev-dependencies]
ozd-engine = { workspace = true }
tempfile = { workspace = true }
tokio = { workspace = true }
tower = { workspace = true, features = ["util"] }
parking_lot = { workspace = true }
